Perkin-UAT/force-app/main/default/objects/Asset/fields/Active_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_End_Date__c</fullName>
    <description>From Caliper production.</description>
    <label>Active Contract End Date</label>
    <type>Date</type>
</CustomField>