Perkin-UAT/force-app/main/default/objects/Asset/fields/Active_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_Type__c</fullName>
    <label>Active Contract Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>