Perkin-UAT/force-app/main/default/objects/Asset/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>CRi and CALP historic information related to this asset</description>
    <label>Additional Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>