Perkin-UAT/force-app/main/default/objects/Asset/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <inlineHelpText>Original License Agreement date</inlineHelpText>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>