Perkin-UAT/force-app/main/default/objects/Asset/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <inlineHelpText>Original quote name - terms agreed upon</inlineHelpText>
    <label>Agreement Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>