Perkin-UAT/force-app/main/default/objects/Asset/fields/Alerts__c.field-meta.xml
<CustomField>
    <fullName>Alerts__c</fullName>
    <description>Important data to view related to this asset</description>
    <label>Alerts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>