Perkin-UAT/force-app/main/default/objects/Asset/fields/Anesthesia_Kit__c.field-meta.xml
<CustomField>
    <fullName>Anesthesia_Kit__c</fullName>
    <description>Copied from CALP 2-10-2012</description>
    <label>Anesthesia Kit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Kit (MK50122-A)</fullName>
            </value>
            <value>
                <fullName>Convertible Kit (MK50122-B)</fullName>
            </value>
            <value>
                <fullName>Chamber (MK50122-IC)</fullName>
            </value>
            <value>
                <fullName>Nose Cone (MK50122-NC)</fullName>
            </value>
            <value>
                <fullName>Heated Stage (MK50122-HS)</fullName>
            </value>
            <value>
                <fullName>CRI Anesthesia Stage (MK50123-1)</fullName>
            </value>
            <value>
                <fullName>CRI Anesthesia Stage (MK50123-2)</fullName>
            </value>
            <value>
                <fullName>CRI Anesthesia Stage (MK50123-3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>