Perkin-UAT/force-app/main/default/objects/Asset/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Instrument Application</description>
    <label>Application</label>
    <type>TextArea</type>
</CustomField>