Perkin-UAT/force-app/main/default/objects/Asset/fields/Assigned_FSE__c.field-meta.xml
<CustomField>
    <fullName>Assigned_FSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User</description>
    <inlineHelpText>Select primary FSE for this product line/territory</inlineHelpText>
    <label>Assigned FSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>