Perkin-UAT/force-app/main/default/objects/Asset/fields/Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date__c</fullName>
    <inlineHelpText>later add lookup to Oppty</inlineHelpText>
    <label>Booked Date</label>
    <type>Date</type>
</CustomField>