Perkin-UAT/force-app/main/default/objects/Asset/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <label>Build</label>
    <length>8</length>
    <type>Text</type>
</CustomField>