Perkin-UAT/force-app/main/default/objects/Asset/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <description>Asset specific location</description>
    <label>Building</label>
    <length>100</length>
    <type>Text</type>
</CustomField>