Perkin-UAT/force-app/main/default/objects/Asset/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Asset location.  When data coming from SAP will map to Functional Location</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>