Perkin-UAT/force-app/main/default/objects/Asset/fields/Contact_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Code__c</fullName>
    <label>Contact Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>