Perkin-UAT/force-app/main/default/objects/Asset/fields/Contract_Line_Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item_Value__c</fullName>
    <label>Contract Line Item Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>