Perkin-UAT/force-app/main/default/objects/Asset/fields/DX_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Active_Date__c</fullName>
    <description>Assets active date for diagnostics team</description>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>