Perkin-UAT/force-app/main/default/objects/Asset/fields/DX_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Inactive_Date__c</fullName>
    <description>Diagnostics Inactive date</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>