Perkin-UAT/force-app/main/default/objects/Asset/fields/DX_Version__c.field-meta.xml
<CustomField>
    <fullName>DX_Version__c</fullName>
    <description>Captures asset versions installed at the client site</description>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.0.0.408</fullName>
            </value>
            <value>
                <fullName>1.0 R2</fullName>
            </value>
            <value>
                <fullName>1.0 R3</fullName>
            </value>
            <value>
                <fullName>1.1</fullName>
            </value>
            <value>
                <fullName>1.2</fullName>
            </value>
            <value>
                <fullName>1.2 R2</fullName>
            </value>
            <value>
                <fullName>1.3</fullName>
            </value>
            <value>
                <fullName>1.3 R2</fullName>
            </value>
            <value>
                <fullName>1.4</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>1.6</fullName>
            </value>
            <value>
                <fullName>1.7</fullName>
            </value>
            <value>
                <fullName>1.7 R2</fullName>
            </value>
            <value>
                <fullName>1.8</fullName>
            </value>
            <value>
                <fullName>1.9</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.1</fullName>
            </value>
            <value>
                <fullName>2.2</fullName>
            </value>
            <value>
                <fullName>2.3</fullName>
            </value>
            <value>
                <fullName>2.5.1</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2008 R2</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2012 R2</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2015 R2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>