Perkin-UAT/force-app/main/default/objects/Asset/fields/DyCE_Seats__c.field-meta.xml
<CustomField>
    <fullName>DyCE_Seats__c</fullName>
    <description>CRi product data</description>
    <label>DyCE Seats</label>
    <length>5</length>
    <type>Text</type>
</CustomField>