Perkin-UAT/force-app/main/default/objects/Asset/fields/DyCE_Software_Key__c.field-meta.xml
<CustomField>
    <fullName>DyCE_Software_Key__c</fullName>
    <description>CRi product data</description>
    <label>DyCE Software Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>