Perkin-UAT/force-app/main/default/objects/Asset/fields/Filter_S_N__c.field-meta.xml
<CustomField>
    <fullName>Filter_S_N__c</fullName>
    <description>CRi product data</description>
    <label>Filter S/N</label>
    <length>80</length>
    <type>Text</type>
</CustomField>