Perkin-UAT/force-app/main/default/objects/Asset/fields/Filter_Types__c.field-meta.xml
<CustomField>
    <fullName>Filter_Types__c</fullName>
    <label>Filter Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blue (MK50102-BLUE)</fullName>
            </value>
            <value>
                <fullName>Green (MK50102-GREEN)</fullName>
            </value>
            <value>
                <fullName>Yellow (MK50102-YELLOW)</fullName>
            </value>
            <value>
                <fullName>Red (MK50102-RED)</fullName>
            </value>
            <value>
                <fullName>Deep Red (MK50102-DEEPRED)</fullName>
            </value>
            <value>
                <fullName>NIR (MK50102-NIR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>