Perkin-UAT/force-app/main/default/objects/Asset/fields/Functional_Loc__c.field-meta.xml
<CustomField>
    <fullName>Functional_Loc__c</fullName>
    <label>Functional Loc</label>
    <length>20</length>
    <type>Text</type>
</CustomField>