Perkin-UAT/force-app/main/default/objects/Asset/fields/fxProductLineName__c.field-meta.xml
<CustomField>
    <fullName>fxProductLineName__c</fullName>
    <description>Created for Ticket#-INC0335220. This field captures Product&#39;s product line.</description>
    <formula>Product2.product_line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field captures Product&#39;s product line.</inlineHelpText>
    <label>fxProductLineName</label>
    <type>Text</type>
</CustomField>