Perkin-UAT/force-app/main/default/objects/Asset/fields/Good_Reference__c.field-meta.xml
<CustomField>
    <fullName>Good_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for PKI asset to mark them as good references that can be used in future sales</description>
    <label>Good Reference</label>
    <type>Checkbox</type>
</CustomField>