Perkin-UAT/force-app/main/default/objects/Asset/fields/Import_Opportunity_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Import_Opportunity_Sequence__c</fullName>
    <inlineHelpText>Set this field ONLY when duplicate assets exist AND set a different number for each unique Original Opportunity</inlineHelpText>
    <label>Import Opportunity Sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>