Perkin-UAT/force-app/main/default/objects/Asset/fields/inForm_Product__c.field-meta.xml
<CustomField>
    <fullName>inForm_Product__c</fullName>
    <label>inForm Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>inForm (MS90087)</fullName>
            </value>
            <value>
                <fullName>Vectra (MS90089)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>