Perkin-UAT/force-app/main/default/objects/Asset/fields/inForm_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>inForm_Serial_No__c</fullName>
    <description>CRi product data</description>
    <label>inForm Serial No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>