Perkin-UAT/force-app/main/default/objects/Asset/fields/Is_Informatics__c.field-meta.xml
<CustomField>
    <fullName>Is_Informatics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Informatics</label>
    <type>Checkbox</type>
</CustomField>