Perkin-UAT/force-app/main/default/objects/Asset/fields/JulianEndDate__c.field-meta.xml
<CustomField>
    <fullName>JulianEndDate__c</fullName>
    <formula>/* Count number of days between End Date &amp; January 1 1900 AD */
(
    (
        End_Date__c
        + 1
    )
    - (
        DATE(
            1900,
            1,
            1
        )
        - 1
    )
)
/* Add number of days between noon January 1 4713 BC &amp; January 1 1900 AD. This results in a Julian End Date */
+ 2415018.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JulianEndDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>