Perkin-UAT/force-app/main/default/objects/Asset/fields/Lab_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lab_Phone__c</fullName>
    <description>Asset specific</description>
    <label>Lab Phone</label>
    <type>Phone</type>
</CustomField>