Perkin-UAT/force-app/main/default/objects/Asset/fields/Last_Service_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Activity_Date__c</fullName>
    <label>Last Service Activity Date</label>
    <type>Date</type>
</CustomField>