Perkin-UAT/force-app/main/default/objects/Asset/fields/LI_License_Key__c.field-meta.xml
<CustomField>
    <fullName>LI_License_Key__c</fullName>
    <label>LI License Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>