Perkin-UAT/force-app/main/default/objects/Asset/fields/Location_Detail__c.field-meta.xml
<CustomField>
    <fullName>Location_Detail__c</fullName>
    <description>used to add information about the instruments location at the customer site</description>
    <label>Location Detail</label>
    <type>TextArea</type>
</CustomField>