Perkin-UAT/force-app/main/default/objects/Asset/fields/LW_Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>LW_Sales_Lead__c</fullName>
    <inlineHelpText>Enter the Sales Represenative who made the original sale</inlineHelpText>
    <label>LW Sales Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Claudia Lukac Nye</fullName>
                <default>true</default>
                <label>Claudia Lukac Nye</label>
            </value>
            <value>
                <fullName>Craig Babinec</fullName>
            </value>
            <value>
                <fullName>Evelyne Lang</fullName>
            </value>
            <value>
                <fullName>Jerry Lominac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>