Perkin-UAT/force-app/main/default/objects/Asset/fields/Maintenance_Planning_Group__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Planning_Group__c</fullName>
    <label>Maintenance Planning Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>