Perkin-UAT/force-app/main/default/objects/Asset/fields/MaintPlant__c.field-meta.xml
<CustomField>
    <fullName>MaintPlant__c</fullName>
    <label>MaintPlant</label>
    <length>30</length>
    <type>Text</type>
</CustomField>