Perkin-UAT/force-app/main/default/objects/Asset/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ENVIRONMENTAL</fullName>
            </value>
            <value>
                <fullName>FORENSIC</fullName>
            </value>
            <value>
                <fullName>HYDROCARBON</fullName>
            </value>
            <value>
                <fullName>ALTERNATE ENERGY</fullName>
            </value>
            <value>
                <fullName>MATERIALS CHAR</fullName>
            </value>
            <value>
                <fullName>FOOD &amp; CONSUMER</fullName>
            </value>
            <value>
                <fullName>PHARMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>