Perkin-UAT/force-app/main/default/objects/Asset/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <label>Model Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>