Perkin-UAT/force-app/main/default/objects/Asset/fields/Move_Information__c.field-meta.xml
<CustomField>
    <fullName>Move_Information__c</fullName>
    <description>LST Support:  Record notes when instrument is relocated.</description>
    <label>Move Information</label>
    <type>TextArea</type>
</CustomField>