Perkin-UAT/force-app/main/default/objects/Asset/fields/Oosight_Compensator_S_N__c.field-meta.xml
<CustomField>
    <fullName>Oosight_Compensator_S_N__c</fullName>
    <description>CRi product data</description>
    <label>Oosight Compensator S/N</label>
    <length>15</length>
    <type>Text</type>
</CustomField>