Perkin-UAT/force-app/main/default/objects/Asset/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Windows 7 Operating System</fullName>
            </value>
            <value>
                <fullName>Dual Windows XP and Windows XP</fullName>
            </value>
            <value>
                <fullName>Dual Windows 2000 and Windows 2000</fullName>
            </value>
            <value>
                <fullName>Dual Windows 2000 and Windows 98</fullName>
            </value>
            <value>
                <fullName>Windows XP non Dual Boot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>