Perkin-UAT/force-app/main/default/objects/Asset/fields/Original_DyCE_Key__c.field-meta.xml
<CustomField>
    <fullName>Original_DyCE_Key__c</fullName>
    <description>CRi product data</description>
    <label>Original DyCE Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>