Perkin-UAT/force-app/main/default/objects/Asset/fields/Original_Software_Key__c.field-meta.xml
<CustomField>
    <fullName>Original_Software_Key__c</fullName>
    <description>CRi data, software ships with one key, can be updated by FSE at install</description>
    <label>Original Software Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>