Perkin-UAT/force-app/main/default/objects/Asset/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Asset needed for child relationship within LST System</description>
    <label>Parent Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>