Perkin-UAT/force-app/main/default/objects/Asset/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>CLH</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>ESS</fullName>
            </value>
            <value>
                <fullName>FAP</fullName>
            </value>
            <value>
                <fullName>FGP</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>HCS</fullName>
            </value>
            <value>
                <fullName>HMG</fullName>
            </value>
            <value>
                <fullName>HTS</fullName>
            </value>
            <value>
                <fullName>IAS</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LCA</fullName>
            </value>
            <value>
                <fullName>LVI</fullName>
            </value>
            <value>
                <fullName>MAS</fullName>
            </value>
            <value>
                <fullName>MFT</fullName>
            </value>
            <value>
                <fullName>MLD</fullName>
            </value>
            <value>
                <fullName>NEO</fullName>
            </value>
            <value>
                <fullName>PGI</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
            <value>
                <fullName>QTS</fullName>
            </value>
            <value>
                <fullName>RADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>