Perkin-UAT/force-app/main/default/objects/Asset/fields/Product_Line_INF__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_INF__c</fullName>
    <formula>Product2.product_line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>