Perkin-UAT/force-app/main/default/objects/Asset/fields/Product_Software__c.field-meta.xml
<CustomField>
    <fullName>Product_Software__c</fullName>
    <description>Product Line Dependent Picklist</description>
    <inlineHelpText>Please select the Product Family</inlineHelpText>
    <label>Product Software</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>iLinkPro Software v.1.0 SP1</fullName>
            </value>
            <value>
                <fullName>iLinkPro Software v.1.0 SP2</fullName>
            </value>
            <value>
                <fullName>iLinkPro Software v.1.1</fullName>
            </value>
            <value>
                <fullName>iLinkPro Software v.1.1 SP3</fullName>
            </value>
            <value>
                <fullName>iLinkPro Software v.1.1 SP4</fullName>
            </value>
            <value>
                <fullName>Maestro Software v.4.1.7</fullName>
            </value>
            <value>
                <fullName>Maestro Software v.4.2 SP3</fullName>
            </value>
            <value>
                <fullName>Maestro Software v.4.4 SP1</fullName>
            </value>
            <value>
                <fullName>Maestro Software v.4.4 SP2</fullName>
            </value>
            <value>
                <fullName>Maestro Software v.5.0 SP1</fullName>
            </value>
            <value>
                <fullName>RapidPlate v.1.01</fullName>
            </value>
            <value>
                <fullName>RapidPlate v.1.4</fullName>
            </value>
            <value>
                <fullName>RapidPlate v.2.3</fullName>
            </value>
            <value>
                <fullName>RapidPlate v.2.4</fullName>
            </value>
            <value>
                <fullName>RapidPlate v.2.5</fullName>
            </value>
            <value>
                <fullName>Sciclone Software v.3.2</fullName>
            </value>
            <value>
                <fullName>Sciclone Software v.3.4 SP2</fullName>
            </value>
            <value>
                <fullName>Sciclone Software v.3.5</fullName>
            </value>
            <value>
                <fullName>Sciclone Software v.3.5 SP1</fullName>
            </value>
            <value>
                <fullName>Zephyr Genomic Workstation v.1.0</fullName>
            </value>
            <value>
                <fullName>Zephyr SPE v.1.0</fullName>
            </value>
            <value>
                <fullName>Living Image v.4.3.1</fullName>
            </value>
            <value>
                <fullName>Living Image v.4.2</fullName>
            </value>
            <value>
                <fullName>Living Image v.4.1</fullName>
            </value>
            <value>
                <fullName>Living Image v.4.0</fullName>
            </value>
            <value>
                <fullName>Living Image v.3.2</fullName>
            </value>
            <value>
                <fullName>Living Image v.3.1</fullName>
            </value>
            <value>
                <fullName>Living Image v.3.0</fullName>
            </value>
            <value>
                <fullName>Living Image v.2.60.02</fullName>
            </value>
            <value>
                <fullName>Living Image v.2.60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>