Perkin-UAT/force-app/main/default/objects/Asset/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <inlineHelpText>Original Agreement</inlineHelpText>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>