Perkin-UAT/force-app/main/default/objects/Asset/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <inlineHelpText>Lookup from CPQ</inlineHelpText>
    <label>Quote Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>