Perkin-UAT/force-app/main/default/objects/Asset/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <description>asset specific location</description>
    <label>Room</label>
    <length>100</length>
    <type>Text</type>
</CustomField>