Perkin-UAT/force-app/main/default/objects/Asset/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <description>SO history from Oracle</description>
    <inlineHelpText>Instrument purchase SO</inlineHelpText>
    <label>Sales Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>