Perkin-UAT/force-app/main/default/objects/Asset/fields/Software_seats__c.field-meta.xml
<CustomField>
    <fullName>Software_seats__c</fullName>
    <description>CRi product info</description>
    <label>Software seats</label>
    <length>5</length>
    <type>Text</type>
</CustomField>