Perkin-UAT/force-app/main/default/objects/Asset/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <label>Software Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>