Perkin-UAT/force-app/main/default/objects/Asset/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>SAP System Status</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>