Perkin-UAT/force-app/main/default/objects/Asset/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Street 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>