Perkin-UAT/force-app/main/default/objects/Asset/fields/System_ID__c.field-meta.xml
<CustomField>
    <fullName>System_ID__c</fullName>
    <description>Automation systems from CALP</description>
    <label>System ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>