Perkin-UAT/force-app/main/default/objects/Asset/fields/U_of_M__c.field-meta.xml
<CustomField>
    <fullName>U_of_M__c</fullName>
    <formula>Product2.U_of_M_INF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>U of M</label>
    <type>Text</type>
</CustomField>