Perkin-UAT/force-app/main/default/objects/Asset/fields/Unit_Price_LC__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_LC__c</fullName>
    <inlineHelpText>must calc Unit Price in LC</inlineHelpText>
    <label>Unit Price LC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>